[package]
name = "watchtower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-costexplorer = "1.30.0"
lambda_http = { version = "0.11.1", features = ["tracing"] }
lambda_runtime = { version = "0.11.2", features = ["tracing"] }
serenity = { version = "0.12.1", features = ["full"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "json"] }
