[package]
name = "watchtower"
version = "0.1.0"
edition = "2021"

[features]
default = ["discord"]
discord = ["dep:serenity"]

[dependencies]
anyhow = "1.0.86"
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-costexplorer = "1.30.0"
chrono = "0.4.38"
lambda_http = { version = "0.11.1", features = ["tracing"] }
lambda_runtime = { version = "0.11.2", features = ["tracing"] }
serde = "1.0.203"
serde_json = "1.0.117"
serenity = { version = "0.12.1", features = ["model", "chrono", "tokio_task_builder", "utils", "http"], optional = true }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "json"] }
